Thu Jun 19 13:35:25 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Jun 17 11:21:16 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/queryparser.h: Improve the descriptions of the
	  stem_strategy values.  (Reported by "oilap" on #xapian)

Tue Jun 17 11:09:32 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/extraweightpostlist.h: Add an assertion that get_sumextra()
	  returns a weight contribution which is <= the upper bound which
	  get_maxextra() returns.

Tue Jun 17 06:48:19 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* api/leafpostlist.cc,matcher/synonympostlist.cc: Add assertions that
	  get_sumpart() returns a weight contribution which is <= the upper
	  bound which get_maxpart() returns.

Tue Jun 17 05:32:00 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* examples/quest.cc: Fix ordering of "bm25" and "bool" in allegedly
	  sorted list, so that --weight bm25 and --weight bool work.

Tue Jun 17 05:29:57 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* examples/quest.cc: Rework the weight name lookup to use a table like
	  the other lookups.  Change the weight names not to include "weight".

Tue Jun 17 05:28:06 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* examples/quest.cc: Add --weight option to allow the weighting scheme
	  to be specified.

Tue Jun 17 03:58:23 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* HACKING: Replace a link to the outdated autotools "goat book" with a
	  link to the "Portable Shell" chapter of the autoconf manual.

Mon Jun 02 11:56:41 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu May 29 11:22:25 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Ensure the test WritableDatabase object gets
	  destroyed before we delete its directory, so the testcase works on